# QuickVidRecap

./: README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 46cc619f93cb_added_urls.py  af3b53cd9423_initial_tables.py
app/: main.py
app/auth/: google_auth.py
app/controller/: UserController.py
app/db/: database.py
app/model/: Subscription.py  User.py  Video.py  __init__.py
app/repository/: SubscriptionRepository.py  UserRepository.py  VideoRepository.py  __init__.py
app/schema/: SubscriptionSchema.py  UserSchema.py  VideoSchema.py
