[project]
name = "quickvidrecap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "authlib>=1.6.1",
    "config>=0.5.1",
    "fastapi[standard]>=0.116.1",
    "itsdangerous>=2.2.0",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
]
